# This file is part of PlotMS.  


srcs += files(
       'isotopes.f90',
       'boxmuller.f90',
       'entries.f90',
       'version.f90',
       'readcommon.f90',
       'readl.f90',
       'xtb_mctc_accuracy.f90',
       'xtb_mctc_constants.f90',
       'xtb_mctc_convert.f90',
       'xtb_mctc_symbols.f90',
       'xtb_mctc_resize.f90'
       )

prog += files(
  'main.F90',
)

